<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Party">

    <include layout="@layout/activity_navbar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:id="@+id/include"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/include" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/party"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/holo_purple">

        <TextView
                android:text="@string/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/partyText" android:textSize="30sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
        <!--<ListView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="600dp"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/teamList"-->
                <!--app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/partyText"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>-->

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/heroList"
                android:layout_width="396dp"
                android:layout_height="0dp"

                android:scrollbars="vertical"
                tools:listitem="@layout/listview_row"

                app:layout_constraintTop_toBottomOf="@+id/partyText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        />
        <Button
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/partyText"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/partyText"/>
        <Button
                android:text="@string/host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hostButton"
                app:layout_constraintEnd_toStartOf="@+id/partyText"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/partyText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>