<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dieRoller_page">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/layout"
                app:layout_constraintTop_toBottomOf="@+id/include" app:layout_constraintStart_toStartOf="parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="411dp"
                    android:layout_height="262dp"
                    android:id="@+id/constraintLayout2"
                    android:layout_weight="1"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <Spinner
                        android:layout_width="244dp"
                        android:layout_height="40dp"
                        android:id="@+id/numberSpinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/thingBox"
                        app:layout_constraintBottom_toTopOf="@+id/typeSpinner"/>
                <TextView
                        android:text="Thing"
                        app:autoSizeTextType="uniform"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:id="@+id/typeText"
                        app:layout_constraintEnd_toStartOf="@+id/thingBox"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/numberText"/>


                <TextView
                        android:text="@string/die_number"
                        app:autoSizeTextType="uniform"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:id="@+id/numberText"
                        app:layout_constraintEnd_toStartOf="@+id/numberSpinner"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toBottomOf="@+id/typeText"
                        app:layout_constraintBottom_toTopOf="@+id/dieText"/>

                <TextView
                        android:text="@string/die_type"
                        app:autoSizeTextType="uniform"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:id="@+id/dieText"
                        app:layout_constraintEnd_toStartOf="@+id/typeSpinner"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toBottomOf="@+id/numberText"
                        app:layout_constraintBottom_toTopOf="@+id/modifiersText"/>

                <TextView
                        android:text="@string/target"
                        app:autoSizeTextType="uniform"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:id="@+id/targetText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/targetSpinner" android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toBottomOf="@+id/modifiersText"/>


                <TextView
                        android:text="@string/success"
                        app:autoSizeTextType="uniform"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:id="@+id/toSuccedText"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/modifiersBox"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/toSuccedBox"
                        app:layout_constraintTop_toBottomOf="@+id/typeSpinner"
                        app:layout_constraintBottom_toTopOf="@+id/targetSpinner"/>
                <TextView
                        android:text="@string/modifiers"
                        app:autoSizeTextType="uniform"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:id="@+id/modifiersText"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dieText"
                        app:layout_constraintBottom_toTopOf="@+id/targetText"
                        app:layout_constraintEnd_toStartOf="@+id/modifiersBox" android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.652"/>
                <EditText
                        android:id="@+id/thingBox"
                        style="@style/MyEditTextStyle"
                        android:layout_width="244dp"
                        android:layout_height="40dp"
                        android:ems="10"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/numberSpinner"/>
                <EditText
                        android:id="@+id/modifiersBox"
                        style="@style/MyEditTextStyle"
                        android:layout_width="244dp"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:text="@string/zero"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/typeSpinner"
                        app:layout_constraintBottom_toTopOf="@+id/targetSpinner"/>
                <EditText
                        android:id="@+id/toSuccedBox"
                        style="@style/MyEditTextStyle"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:text="@string/zero"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        app:layout_constraintStart_toEndOf="@+id/toSuccedText"
                        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/typeSpinner"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/targetSpinner"/>
                <Spinner
                        android:layout_width="244dp"
                        android:layout_height="40dp"
                        android:id="@+id/typeSpinner"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/numberSpinner"
                        app:layout_constraintBottom_toTopOf="@+id/modifiersBox"/>
                <Spinner
                        android:layout_width="244dp"
                        android:layout_height="40dp"
                        android:id="@+id/targetSpinner"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/modifiersBox"
                />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                    android:text="@string/roll"
                    android:layout_width="100dp"
                    android:layout_height="67dp"
                    android:id="@+id/rollButton"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="24sp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="418dp"
                    app:layout_constraintTop_toBottomOf="@+id/rollButton" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
                    android:id="@+id/constraintLayout">


                <ImageView
                        app:srcCompat="@drawable/roll"
                        android:id="@+id/dieView"
                        android:layout_width="168dp"
                        android:layout_height="153dp"
                        android:layout_weight="1"
                        app:layout_constraintTop_toTopOf="@+id/rollList"
                        app:layout_constraintBottom_toBottomOf="@+id/rollList"
                        app:layout_constraintStart_toStartOf="@+id/rollList"
                        app:layout_constraintEnd_toEndOf="@+id/rollList" app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintVertical_bias="0.0"/>
                <ListView
                        android:layout_width="395dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/rollList"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                >

                </ListView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <include layout="@layout/activity_navbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/include"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>